--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "bootstrap": "^4.4.1",
     "firebase": "^7.14.2",
     "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-moment": "^0.9.7",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
